--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -11,7 +11,7 @@
     <meta name="renderer" content="webkit" />
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <meta name="msapplication-tap-highlight" content="no" />
-    <title>三两云合同管理系统</title>
+    <title>三两云物业运营端</title>
     <script src="/zen.dev.js"></script>
     <link rel="stylesheet" type="text/css" href="/zen.css">
 </head>
